// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Python Handlers Code Generation Script Unit Tests Generates With handlers.yaml 1`] = `
"from test_client.models import *
from test_client.apis.tags.default_api_operation_config import (
    python_one_handler, PythonOneRequest, PythonOneOperationResponses, ApiResponse
)


def python_one(input: PythonOneRequest, **kwargs) -> PythonOneOperationResponses:
    """
    Type-safe handler for the PythonOne operation
    """
    # TODO: Implement PythonOne Operation
    return ApiResponse(
        status_code=500,
        body=InternalFailureErrorResponseContent(
            message="Not Implemented!"),
        headers={}
    )


# Entry point for the AWS Lambda handler for the PythonOne operation.
# The python_one_handler method wraps the type-safe handler and manages marshalling inputs and outputs
handler = python_one_handler(python_one)"
`;

exports[`Python Handlers Code Generation Script Unit Tests Generates With handlers.yaml 2`] = `
"from test_client.models import *
from test_client.apis.tags.default_api_operation_config import (
    python_two_handler, PythonTwoRequest, PythonTwoOperationResponses, ApiResponse
)


def python_two(input: PythonTwoRequest, **kwargs) -> PythonTwoOperationResponses:
    """
    Type-safe handler for the PythonTwo operation
    """
    # TODO: Implement PythonTwo Operation
    return ApiResponse(
        status_code=500,
        body=InternalFailureErrorResponseContent(
            message="Not Implemented!"),
        headers={}
    )


# Entry point for the AWS Lambda handler for the PythonTwo operation.
# The python_two_handler method wraps the type-safe handler and manages marshalling inputs and outputs
handler = python_two_handler(python_two)"
`;
